# jetDB

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sampleData.sql  shell.nix
include/: dbConnectionParams.hpp  handlers.hpp  prepared_statements.hpp  requests.hpp
include/handlers/: addFlight.hpp  addUser.hpp  available_flights.hpp  avg_costs.hpp  bookFlight.hpp  cost_summary.hpp  customers.hpp  deleteBooking.hpp  find_paths.hpp  flewEveryAirline.hpp  get_airlines.hpp  get_airports.hpp  get_bookings.hpp  login.hpp  login2.hpp  updateRingLevel.hpp
src/: CMakeLists.txt  main.cpp  ring2.cpp  ring2.h  ring2Window.cpp  ring2Window.h  test.cpp  utility.cpp  utility.h
src/client/: main.cpp  main2.cpp  setup.py
src/client/jetdb/: __init__.py
src/server/: handlers.cpp  main.cpp
test/: CMakeLists.txt  Dockerfile  ddl.sql  docker-compose.yml  getFlights.sql  insert.sql  playground.sh  sampleData.sql  sampleDataJetDB.sql  tests.cpp
